--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,3 +1,9 @@
 <p>This is the partial for view 1.</p>
 
-{{users}}
+
+<div ng-repeat="user in users">
+    <div>{{$index}}</div>
+    <div>{{user.name}}</div>
+    <div>{{user.age}}</div>
+</div>
+
